# sox

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.depend  README  README.md  README.sh  alsa.c  amr.h  ao.c  caf.c  configure  configure.ac  configure.local.example  coreaudio.c  effects.h  example0.c  example1.c  fap.c  flac.c  formats.h  gsm.c  have-coreaudio.c  have-sndfile.c  libsox.3  lpc10.c  mat4.c  mat5.c  optional-fmts.am  opus.c  oss.c  paf.c  pulseaudio.c  pvf.c  release.sh  sd2.c  sndfile.c  (+21 more)
libgsm/: Makefile.am
src/: CMakeLists.txt  Makefile.am  formats.c  formats.h  gsm.c  libsox.c  sox.c  sox_i.h  testall.sh  util.h  wav.c
